--- a/templates/store/read.html.twig
+++ b/templates/store/read.html.twig
@@ -77,7 +77,7 @@
 
         {# Titre de la page #}
         <div class="black">
-            <h3>Les Produits</h3>
+            <h3>Produits</h3>
         </div>
 
         <div class="black">  
