--- a/templates/recipe/create.html.twig
+++ b/templates/recipe/create.html.twig
@@ -62,8 +62,12 @@
                 {{ form_row(form.NumberPeople) }}
                 <br>
                 </td>
+
             <table>
                 <tr>
+                    <td>
+                    {{ form_row(form.productRecettes) }}
+                    </td>
                     <td>
                     {{ form_row(form.quantityGram) }}
                     </td>
@@ -72,6 +76,20 @@
                     </td>
                 </tr>
             </table>
+            <table>
+                <tr>
+                    <td>
+                    {{ form_row(form.productRecettes) }}
+                    </td>
+                    <td>
+                    {{ form_row(form.quantityGram) }}
+                    </td>
+                    <td>
+                    {{ form_row(form.quantityUnit) }}
+                    </td>
+                </tr>
+            </table>
+            
             <br>
             <hr>
             <br>
